started html structure

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>Javascript Quiz</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    
+    <header>
+        <a id=leaderboard-link>View Highscores <i class="fas fa-hand-point-left fa-lg"></i>
+        </i></a> 
+        
+        <time>Time: <span id="time"></span></time>
+    </header>
+
 </body>
-</html>
