--- a/index.html
+++ b/index.html
@@ -20,3 +20,54 @@
     </header>
 
 </body>
+<main>
+    <div id=start-card class="card">
+        <h2 id=title>Coding Quiz Challenge</h2>
+        <p>Answer the following code-related questions within the time limit. <br><br> Incorrect answers each subtract ten points from your final score!</p>
+        <button id=start-button class="button">Start Quiz</button>
+    </div>
+
+    <div hidden id=question-card class="card">
+
+        <h2 id=question-text></h2>
+
+        <div id=quiz-options>
+            <button id=option0 class="button option-button"></button>
+            <button id=option1 class="button option-button"></button>
+            <button id=option2 class="button option-button"></button>
+            <button id=option3 class="button option-button"></button>
+        </div>
+
+        <div id=result-div>
+            <hr>
+            <p id=result-text></p>
+        </div>
+
+    </div>
+
+    <div hidden id=score-card class="card">
+        <h2>Done!</h2>
+        <p>Your final score: <span id=score></span>.</p>
+        <form class="inline-form" id="submission-form">
+              <label for="initials">Record initials: </label>
+              <input type="text" id="initials">
+              <button id="submit-button" class="button">Submit</button>
+        </form>
+    </div>
+
+    <div hidden id=leaderboard-card class="card">
+        <h2>Highscores</h2>
+        <ol id="Highscore-list">
+        </ol>
+        <div class="inline-buttons">
+            <button id="back-button" class="button">Go Back</button>
+            <button id="clear-button" class="button">Clear Highscores</button>
+        </div>
+    </div>
+
+</main>
+
+<script src="./assets/js/script.js"></script>
+</body>
+
+</html>
