--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> 
     <title>Javascript Quiz</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
@@ -67,7 +66,7 @@
     </div>
 
 </main>
-
+</div>
 <script src="./assets/js/script.js"></script>
 </body>
 
